# Athene

./: .gitignore  README.md
generateTrainingData/: generateTrainingData.cpp
generateTrainingData/scripts/: namescript
generateTrainingData/textsource/: text.odt
informationWindow/: .project  pom.xml
informationWindow/src/main/java/informationWindow/informationWindow/: AnimationWindow.java  App.java  BufferedViewer.java  ImageTupel.java  ResultWindow.java  Utils.java
informationWindow/src/main/java/informationWindow/informationWindow/res/: package-info.java
informationWindow/src/main/java/spotlight/delphi/: package-info.java
informationWindow/src/main/java/spotlight/delphi/utils/: BufferedViewer.java  (+2 more)
informationWindow/src/test/java/informationWindow/informationWindow/: AppTest.java
spotlight-delphi/: .project  pom.xml
writingDetection/probe1/source/: text.tex
writingDetection/source/: CMakeLists.txt  CharPreparationSpace.cpp  CharPreparationSpace.h  Constants.h  Testmain.cpp  Utils.h  testScript
writingDetection/source/Training/: CMakeLists.txt  CharPreparationSpace.cpp  CharPreparationSpace.h  Testmain.cpp
writingDetection/source/Training/FourierApproach/: FourierDescriptor.cpp  FourierDescriptor.h
writingDetection/source/Training/HoughApproach/: CMakeLists.txt  CharPreparationSpace.cpp  CharPreparationSpace.h  Info  Testmain.cpp
writingDetection/source/Utils/: Constants.h  Utils.cpp  Utils.h
writingDetection/source/generateTrainingData/: CMakeLists.txt  generateTrainingData.cpp  script
writingDetection/source/generateTrainingData/textsource/: text.odt
writingDetection/source/imgPreprocessing/: CMakeLists.txt  main.cpp  preprocessing.cpp  preprocessing.h  script
writingDetection/testimg/source/: text.tex
(+21 files in other folders)
